# CJU_MASTER

./: .gitattributes  README.md
SaveFile1/vuasrl_ws/devel/: setup.sh
SaveFile1/vuasrl_ws/src/tugcar_description/: package.xml
SaveFile1/vuasrl_ws/src/tugcar_motionplan/: CMakeLists.txt
SaveFile1/vuasrl_ws/src/tugcar_moveit/: .setup_assistant
SaveFile1/vuasrl_ws/src/tugcar_navigation/: package.xml
SaveFile1/vuasrl_ws/src/tugcar_simulations/: package.xml
SaveFile1/vuasrl_ws/src/tugcar_teleop/: package.xml
coding/python/ch01/: HelloCV.py  hihello.py
coding/python/ch02/:  camera_open.py  camera_in.py  drawing.py  img_info.py  img_ops.py  keyboard.py  mask_op.py  mouse.py  time_check.py  trackbar.py  video_effect.py  video_out.py
coding/python/ch03/: backproj1.py  brightness.py  color.py  contrast1.py  contrast2.py  equalize.py  histogram2.py  inrange1.py
coding/python/ch04/: bilateral.py  gaussian1.py  sharpening1.py
coding/python/ch06/: sobel.py
mavel_ws/devel/: .catkin  .rosinstall  local_setup.sh
mavel_ws/devel/include/marvelmind_nav/: MarvelmindAPI.h  MarvelmindAPIRequest.h  MarvelmindAPIResponse.h  MarvelmindUserData.h  beacon_distance.h  beacon_pos_a.h  hedge_imu_fusion.h  hedge_imu_raw.h  hedge_pos.h  hedge_pos_a.h  hedge_pos_ang.h  hedge_quality.h  hedge_telemetry.h  marvelmind_waypoint.h
mavel_ws/devel/lib/marvelmind_nav/: hedge_rcv_bin  marvelmind_api_ros  subscriber_test
mavel_ws/devel/lib/pkgconfig/: marvelmind_nav.pc
vuasrl_ws/: frames.gv  manipulation.ipynb
vuasrl_ws/.ipynb_checkpoints/: manipulation-checkpoint.ipynb
vuasrl_ws/devel/: .catkin
vuasrl_ws/devel/include/action_tutorial/: MazeActionFeedback.h  MazeActionResult.h  MazeGoal.h
vuasrl_ws/devel/include/cpp_service_tutorial/: ControlTurningMessageRequest.h
vuasrl_ws/devel/include/hdl_graph_slam/: DumpGraph.h  DumpGraphRequest.h  DumpGraphResponse.h  FloorCoeffs.h  LoadGraph.h  LoadGraphRequest.h  LoadGraphResponse.h  SaveMap.h  SaveMapRequest.h  SaveMapResponse.h  ScanMatchingStatus.h
vuasrl_ws/devel/include/master_ros/: Demo_actionActionResult.h  Demo_actionResult.h
vuasrl_ws/devel/include/service_tutorial/: ControlTurningMessageRequest.h  ControlTurningMessageResponse.h
vuasrl_ws/devel/include/tugcar_msgs/: CtrlCmd.h  SensorState.h  Sound.h  TugcarStatus.h  VersionInfo.h
vuasrl_ws/devel/lib/cost_map/: cost_map
vuasrl_ws/devel/lib/cpp_action_tutorial/: fibonacci_action_client
vuasrl_ws/devel/lib/cpp_service_tutorial/: spawn_model_client
vuasrl_ws/devel/lib/cpp_topic_tutorial/: parking_node
vuasrl_ws/devel/lib/fast_gicp/: gicp_align  gicp_kitti
vuasrl_ws/devel/lib/fast_lio/: fastlio_mapping
vuasrl_ws/devel/lib/hdl_graph_slam/: ford2bag.py  map2odom_publisher.py
vuasrl_ws/devel/lib/livox_ros_driver/: livox_ros_driver_node
vuasrl_ws/devel/lib/master_ros/: demo_topic_subscriber
vuasrl_ws/devel/lib/ndt_omp/: align
vuasrl_ws/devel/lib/pkgconfig/: action_tutorial.pc  astar_ros.pc  cost_map.pc  cpp_action_tutorial.pc  fast_gicp.pc  fast_lio.pc  gcamp_gazebo.pc  goal_publisher.pc  hdl_graph_slam.pc  livox_ros_driver.pc  ndt_omp.pc  occupancy_gridmap.pc  ouster_gazebo_plugins.pc  robot_arm_control.pc  robot_arm_test.pc  robot_manipulator.pc  rrt-planning.pc  service_tutorial.pc  smart_tugcar_moveit.pc  test_pkg.pc  tf_graph_slam.pc  topic_tutorial.pc  tugcar_bringup.pc  tugcar_description.pc  tugcar_lane_dection.pc  tugcar_lane_detection.pc  tugcar_lane_fitting.pc  tugcar_motionplan.pc  tugcar_msgs.pc  tugcar_navigation.pc  tugcar_simulations.pc  tugcar_teleop.pc  turtlebot3_gazebo.pc  turtlebot3_manipulation_description.pc  turtlebot3_manipulation_slam.pc  velodyne_gazebo_plugins.pc  visual_servoing.pc  vuasrl_arm_description.pc  vuasrl_car_description.pc  vuasrl_car_nav.pc  (+5 more)
vuasrl_ws/devel/lib/robot_arm_test/: add_collision_object  attach_detach_object  check_collision  pick_place  pick_place_action  remove_collision_objct  test_custom_node  test_random_node
vuasrl_ws/devel/lib/rrt-planning/: rrt
vuasrl_ws/devel/lib/tf_graph_slam/: tf_graph_slam
vuasrl_ws/devel/lib/tugcar_lane_detection/: tugcar_lane_detection
vuasrl_ws/src/astar_ros/: CMakeLists.txt  package.xml
vuasrl_ws/src/cost_map/: CMakeLists.txt
vuasrl_ws/src/goal_publisher/: CMakeLists.txt  package.xml
vuasrl_ws/src/occupancy_gridmap/: CMakeLists.txt  package.xml
vuasrl_ws/src/robot_arm_control/: CMakeLists.txt
vuasrl_ws/src/robot_arm_test/: CMakeLists.txt
vuasrl_ws/src/robot_arm_test/scripts/: IK.py  arm_controll.py  arm_gripper_control.py  lane_detection.py  manipulator_set.py  test.py
vuasrl_ws/src/robot_arm_test/src/: add_collision_object.cpp  iksolution.cpp  move_group_interface_tutorial.cpp  pick_place.cpp  test_custom.cpp  test_random.cpp
vuasrl_ws/src/robot_manipulator/: CMakeLists.txt
vuasrl_ws/src/tf_graph/: CMakeLists.txt
vuasrl_ws/src/tugcar_bringup/: CMakeLists.txt
vuasrl_ws/src/tugcar_control/: CMakeLists.txt  package.xml
vuasrl_ws/src/tugcar_description/: CMakeLists.txt
vuasrl_ws/src/tugcar_lane_detection/: CMakeLists.txt  package.xml
vuasrl_ws/src/tugcar_lane_detection/config/: utils.py
vuasrl_ws/src/tugcar_lane_detection/scripts/: Steering.py  ekf_lane.py  kf_lane.py  lane_detection.py  lane_follower.py  lane_stop.py  tugcar_fitting.py  ukf_lane.py  ukf_lanee.py  utils.py
vuasrl_ws/src/tugcar_lane_detection/src/: lane_fitting
vuasrl_ws/src/tugcar_moveit/: CMakeLists.txt
vuasrl_ws/src/tugcar_msgs/: CMakeLists.txt
vuasrl_ws/src/tugcar_navigation/: CMakeLists.txt
vuasrl_ws/src/tugcar_simulations/: CMakeLists.txt
vuasrl_ws/src/tugcar_teleop/: CMakeLists.txt  setup.py
vuasrl_ws/src/vuasrl_arm_description/: CMakeLists.txt  package.xml
vuasrl_ws/src/vuasrl_car_description/: CMakeLists.txt  package.xml
vuasrl_ws/src/vuasrl_car_nav/: CMakeLists.txt  package.xml
vuasrl_ws/src/vuasrl_control/: CMakeLists.txt  package.xml
vuasrl_ws/src/vuasrl_manipulation/: CMakeLists.txt
vuasrl_ws/src/vuasrl_manipulation_moveit/: .setup_assistant  CMakeLists.txt
vuasrl_ws/src/vuasrl_manipulation_simulations/: CMakeLists.txt
(+602 files in other folders)
